# P12_cropyield_prediction

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci_cd.yaml
api/: app.py  main.py
inputs/: candidate_items.json
inputs/processed/: clean_data.csv
model/: hgb_optimized.joblib
scripts/: PCA_analysis.ipynb  exploration.ipynb  modelisation.ipynb  predictor.py  utils.py
scripts/artifacts/: cv_results_HGB.csv  cv_results_RF.csv  cv_results_XgBoost.csv  feature_importance.csv  permutation_importance_HGB.csv
tests/: test_unit.py
